# sandy-factry

./: .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md
.cargo/: config.toml
assets/: app-icon.aseprite  background_tiles.aseprite  foreground_tiles.aseprite  new-foreground_tiles.aseprite
crates/sandy-factry-helpers/: Cargo.toml
crates/sandy-factry-helpers/src/: lib.rs
crates/sandy-factry-macros/: Cargo.toml
crates/sandy-factry-macros/src/: foreground_objects.rs  lib.rs
crates/sandy_factry_helpers/: Cargo.toml
crates/sandy_factry_helpers/src/: graph.rs  tilemap.rs
crates/sandy_factry_macros/: Cargo.toml
crates/sandy_factry_macros/src/: foreground_objects.rs  lib.rs  machine_variants.rs
doc/: gamedesign.md
doc/Dokumentation/: main.typ
doc/Dokumentation/assets/: strukto.typ  template.typ
doc/first-submission/: produktskizze.md  versionierung.md
menu-prototypes/: recipemenu.html
raw-assets/: app-icon.aseprite  background_tiles.aseprite  foreground_tiles.aseprite  item_tiles.aseprite  middleground_tiles.aseprite  selection.aseprite
sandy_factry_helpers/: Cargo.toml
sandy_factry_helpers/src/: graph.rs  tilemap.rs
src/: game_save_types.rs  main.rs  save_game.rs  save_keys.rs
src/building/: mod.rs
src/buildings/: belt.rs  belts.rs  crafter.rs  miner.rs  mod.rs  test.rs
src/content/: items.rs  machine_types.rs  mod.rs
src/content/machines/: belt.rs  chest.rs  combiner.rs  crafter.rs  furnace.rs  miner.rs  mod.rs  splitter.rs  tunnel.rs  void.rs
src/helpers/: camera.rs  mod.rs  tilemap.rs
src/machines/: belt.rs  combiner.rs  crafter.rs  furnace.rs  miner.rs  mod.rs  splitter.rs  void.rs
src/plugins/: debug_camera.rs  mod.rs
src/plugins/auto_save/: mod.rs  save.rs  save_indicator.rs
src/plugins/building/: foreground_objects.rs  load_game_save.rs  mod.rs  place_buildings.rs
src/plugins/completion/: check_completion.rs  mod.rs
src/plugins/crafting/: mod.rs  recipe_types.rs
src/plugins/hud/: coordinates.rs  debug.rs  hovered_item.rs  information.rs  information.txt  mod.rs
src/plugins/interaction/: machine_clicked.rs  mod.rs  selection_marker.rs
src/plugins/menu/: main_menu.rs  mod.rs  pause_menu.rs  splash_screen.rs
src/plugins/menu/game_menus/: mod.rs  show_game_menu.rs
src/plugins/menu/game_menus/completed_menu/: mod.rs  setup_menu.rs  update_menu.rs
src/plugins/menu/game_menus/pause_menu/: mod.rs  setup_menu.rs  update_menu.rs
src/plugins/menu/game_menus/recipe_menu/: create_recipe_screen.rs  deselect_machine.rs  mod.rs  update_recipe_screen.rs
src/plugins/menu/main_menu/: how-to-play.txt  how_to_play.rs  mod.rs  start_menu.rs
src/plugins/menu/pause_menu/: mod.rs  save_game.rs
src/plugins/menu/recipe_menu/: create_recipe_screen.rs  mod.rs  update_recipe_screen.rs
src/plugins/rendering/: belt.rs  mod.rs
src/plugins/simulation/: build_graph.rs  graph_to_world.rs  mod.rs  simulate.rs
src/plugins/world/: generation.rs  infinite.rs  load_game_save.rs  mod.rs
