[package]
name = "the-oil-company"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.15", features = ["dynamic_linking"] }
bevy_ecs_tilemap = "0.15"
image = "0.25"
petgraph = "0.8"
winit = "0.30"


# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3


[lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
