[package]
name = "the-oil-company"
version = "0.1.0"
authors = ["Louis Weigel"]
license = "MIT OR Apache-2.0"
description = "A game about building a factory (for oil processing?)"
readme = "Readme.md"
homepage = "https://github.com/TheBlckbird/factory-builder-pi"
repository = "https://github.com/TheBlckbird/factory-builder-pi"
keywords = ["gaming", "factory-builder"]
categories = ["games"]
edition = "2024"

[dependencies]
bevy.workspace = true
bevy_ecs_tilemap.workspace = true
petgraph.workspace = true
image = "0.25"
noise = "0.9"
rand = "0.9"
winit = "0.30"
sandy_factry_helpers = { path = "./sandy_factry_helpers" }


[workspace]
members = ["sandy_factry_helpers", "."]

[workspace.dependencies]
bevy = "0.16"
bevy_ecs_tilemap = "0.16"
petgraph = "0.8"

[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"


[lints]
workspace = true


# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
